--- a/dos.html
+++ b/dos.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title> ۜ\(סּںסּَ` )/ۜ</title>
   </head>
   <body>
     <div class="container">
       <div class="row py-5">
         <div class="col-11 col-sm-10 mx-auto">
-          <h1>Hello, world!</h1>
+          <link rel="stylesheet" href="style.css">
+          <h1>Debi Codriansky</h1>
+              <div id= "cuestiones">
+      <p class="lead">Estudiante de Diseño de 3er año. Se dedica a pintar analogamente estilo clasico </p>
+
         </div>
       </div>
     </div>
@@ -27,8 +31,19 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- después de ir por las bibliotecas, puedes aprovecharlas-->
     <script>
-      //en el código fuente, h1 contiene un mensaje distinto del que se ve
-      $("h1").text("Hola mundo!");
+
+$.getJSON( "https://raw.githubusercontent.com/profesorfaco/dno037-2019/gh-pages/portfolio.json",
+function( curso ) {
+
+console.log(curso);
+
+    $.each(curso[5].trabajos, function(i, trabajo) {
+    $("#cuestiones").append("<h5 class='border-top my-2 py-3 pl-2'>" + trabajo.titulo + "</h5>").
+    append("<img src='" + trabajo.imagen + "'class=img-fluid border-bottom pb-3 mb-3'>").append("<p class='border-top my-2 py-3 pl-2'>" + trabajo.descriptor + "</p>");
+
+                    });
+                  });
+
     </script>
   </body>
 </html>
