--- a/tres.html
+++ b/tres.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title> ۜ\(סּںסּَ` )/ۜ</title>
   </head>
   <body>
     <div class="container">
       <div class="row py-5">
         <div class="col-11 col-sm-10 mx-auto">
-          <h1>Hello, world!</h1>
+          <h1>Diseño y Nuevos Medios</h1>
+          <p class="lead">Curso de Optativo en Profundización con el profesor Felipe Cortez. Aprendemos a diseñar páginas Web con HTML, CSS y JS.</p>
           <div id= "cuestiones">
         </div>
       </div>
@@ -28,27 +29,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- después de ir por las bibliotecas, puedes aprovecharlas-->
     <script>
-      var a = ["Hola mundo!","Adios mundo cruel!"]
-      var b = {saludo: "hola mundo", despedida:"Adios mundo cruel!"}
-      var c =
-      [
-    {saludo:"hola mundo", chroma:"red"},
-    {saludo:"hola", chroma:"blue"},
-    {saludo:"h...", chroma:"green"}
-      ]
-      var curso = [
-        {nombre:"Maria Cecilia Suarez",
-        ingreso:2016,
-        trabajos:[
-        {title:"Blake",imagen:"https://raw.githubusercontent.com/MariaCeciliaSuarez/evaluacion2/gh-pages/ilustracion-1.jpg"},
-        {title:"Kathy",imagen:"https://raw.githubusercontent.com/MariaCeciliaSuarez/evaluacion2/gh-pages/ilustracion-2.jpg"},
-        {title:"Over the sky",imagen:"https://raw.githubusercontent.com/MariaCeciliaSuarez/evaluacion2/gh-pages/ilustraci%C3%B3n-3.jpg"}
-        ]
-      }
-      ]
-      $("#cuestiones").append('<h2>'+ curso[0].nombre+'</h2').append('<h4>'+ curso[0].
-      ingreso+'</h4>').append('<img src="' + curso[0].trabajos[0].imagen +'">');
 
+$.getJSON( "https://raw.githubusercontent.com/profesorfaco/dno037-2019/gh-pages/portfolio.json", function( curso ) {
+
+          $.each(curso, function(i, integrante) {
+    $("#cuestiones").append("<h2 class='mt-5 p-2 bg-azul text-white'>" + integrante.nombre + "</h2>");
+
+    $.each(integrante.trabajos, function(i, trabajo) {
+    $("#cuestiones").append("<h5 class='border-top my-2 py-3 pl-2'>" + trabajo.titulo + "</h5>").
+    append("<img src='" + trabajo.imagen + "'class=img-fluid border-bottom pb-3 mb-3'>").append("<p class='border-top my-2 py-3 pl-2'>" + trabajo.descriptor + "</p>");
+                    });
+                  });
+});
     </script>
   </body>
 </html>
